--- a/templates/App-ugly-tpl.html
+++ b/templates/App-ugly-tpl.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title><%= pkg.name %>-<%= pkg.version %></title>
-    <!--  (c) 2017 CA Technologies.  All Rights Reserved. -->
+    <!--  (c) 2020 Custom Agile.  All Rights Reserved. -->
     <!--  Build Date: <%= new Date() %> -->
 
     <script type="text/javascript">
@@ -17,19 +18,21 @@
 
 
     <script type="text/javascript">
-        Rally.onReady(function() {
+        Rally.onReady(function () {
             <%= ugly_contents %>
 
-               Rally.launchApp('<%= className %>', {
-                   name: '<%= pkg.name %>'
-               });
+                Rally.launchApp('<%= className %>', {
+                    name: '<%= pkg.name %>'
+                });
         });
     </script>
 
     <style type="text/css">
-<%= style_contents %>
+        <%=style_contents %>
     </style>
 
 </head>
+
 <body></body>
+
 </html>
