--- a/templates/App-debug-tpl.html
+++ b/templates/App-debug-tpl.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title><%= pkg.name %>-<%= pkg.version %></title>
-    <!--  (c) 2017 CA Technologies.  All Rights Reserved. -->
+    <!--  (c) 2020 Custom Agile.  All Rights Reserved. -->
     <!--  Build Date: <%= new Date() %> -->
-    
+
     <script type="text/javascript">
         var APP_BUILD_DATE = "<%= new Date() %>";
     </script>
-    
+
     <script type="text/javascript" src="<%= auth.server %>/apps/<%= sdk %>/sdk-debug.js"></script>
     <!-- our highcharts (needed so that we can add patterns) 
     <script type="text/javascript" src="/apps/<%= sdk %>/lib/analytics/analytics-all.js"></script>
     -->
 
     <script type="text/javascript">
-        Rally.onReady(function() {
+        Rally.onReady(function () {
             Rally.loadScripts(<%= JSON.stringify(js_files) %>,
-	            function() {
-	                Rally.launchApp('<%= className %>', {
-	                    name: '<%= pkg.name %>'
-	                })
-	            }, true);
+                function () {
+                    Rally.launchApp('<%= className %>', {
+                        name: '<%= pkg.name %>'
+                    })
+                }, true);
         });
     </script>
-<%
+    <%
     _.each( css_files, function(element) { 
         print('<link rel="stylesheet" type="text/css" href="' + element + '">'); 
      });
@@ -32,5 +33,7 @@
 %>
 
 </head>
+
 <body></body>
+
 </html>
