--- a/templates/App-tpl.html
+++ b/templates/App-tpl.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title><%= pkg.name %>-<%= pkg.version %></title>
-    <!--  (c) 2017 CA Technologies.  All Rights Reserved. -->
+    <!--  (c) 2020 Custom Agile.  All Rights Reserved. -->
     <!--  Build Date: <%= new Date() %> -->
+    <!--  Repository: <%= repository %> -->
 
     <script type="text/javascript">
         var APP_BUILD_DATE = "<%= new Date() %>";
@@ -11,25 +13,23 @@
     </script>
 
     <script type="text/javascript" src="/apps/<%= sdk %>/sdk.js"></script>
-    <!-- our highcharts (needed so that we can add patterns)
-    <script type="text/javascript" src="/apps/<%= sdk %>/lib/analytics/analytics-all.js"></script>
-    -->
-
 
     <script type="text/javascript">
-        Rally.onReady(function() {
+        Rally.onReady(function () {
             <%= js_contents %>
 
-               Rally.launchApp('<%= className %>', {
-                   name: '<%= pkg.name %>'
-               });
+                Rally.launchApp('<%= className %>', {
+                    name: '<%= pkg.name %>'
+                });
         });
     </script>
 
     <style type="text/css">
-<%= style_contents %>
+        <%=style_contents %>
     </style>
 
 </head>
+
 <body></body>
+
 </html>
